--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class="order-actions d-flex justify-content-end ">
-                  <a href="/order/details/<%= order.id %>" class="btn btn-details" style="margin-right: 4px;background-color: rgb(186, 31, 31); border-radius: 8px;border: none;">Return</a>
+                  <!-- <a href="/order/details/<%= order.id %>" class="btn btn-details" style="margin-right: 4px;background-color: rgb(186, 31, 31); border-radius: 8px;border: none;">Return</a> -->
                   <a href="/order/details/<%= order.id %>" class="btn btn-details" style="margin-right: 4px;background-color: #FFAB00; color: #000000;  border-radius: 8px;border: none;">View Details</a>
                 </div>
               </div>
