--- a/views/users/wallet.ejs
+++ b/views/users/wallet.ejs
@@ -53,7 +53,7 @@
           <div class="wallet-card">
             <div class="wallet-holder"><%= walletData.holderName %></div>
             <div class="wallet-number">**** **** **** <%= walletData.cardLastDigits %></div>
-            <div class="wallet-balance">Rs. <%= walletData.balance %></div>
+            <div class="wallet-balance"> <%= walletData.balance %></div>
           </div>
           <table class="transactions-table">
             <thead>
