--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -159,17 +159,17 @@
   display: inline-block;
   margin: 0 5px;
   padding: 8px 12px;
-  background-color: #007bff;
+  background-color: #25874b;
   color: white;
   text-decoration: none;
   border-radius: 4px;
 }
 
 .pagination-btn.active {
-  background-color: #0056b3;
+  background-color: #077c33;
 }
 
 .pagination-btn:hover {
-  background-color: #0056b3;
+  background-color: #077c33;
 }
 
