orderdetails price is set excluding coupon

--- a/views/users/orderDetails.ejs
+++ b/views/users/orderDetails.ejs
@@ -143,7 +143,7 @@
                       <p>
                         <%= product.productId.name %>
                       </p> <!-- Display product name -->
-                      <p><strong>Price:</strong> &#8377;<%= product.productId.price.toFixed(2) %>
+                      <p><strong>Price:</strong> &#8377;<%= product.productId.offerPrice.toFixed(2) %>
                       </p> <!-- Display price -->
                       <p><strong>Quantity:</strong> <%= product.quantity %>
                       </p> <!-- Display quantity -->
