--- a/views/users/userdashboard.ejs
+++ b/views/users/userdashboard.ejs
@@ -65,7 +65,7 @@
             <input type="text" id="userName" placeholder="Username" value="<%= user.userName %>">
             <p id="userNameError" class="errormessagedash1" style="color: red; font-size: 14px;margin-top: 5px;"></p>
           
-            <input type="text" id="email" placeholder="Email" value="<%= user.email %>">
+            <input readonly type="text" id="email" placeholder="Email" value="<%= user.email %>">
             <p id="emailError" class="errormessagedash1" style="color: red; font-size: 14px;margin-top: 5px;"></p>
           
             <input type="text" id="mobileNumber" placeholder="Mobile Number" value="<%= user.mobileNumber %>">
