--- a/views/users/wishlist.ejs
+++ b/views/users/wishlist.ejs
@@ -90,8 +90,8 @@
                   <tr>
                     <td class="product-thumbnail">
                       <img
-                        src="<%= item.productId.images[0] %>"
-                        alt="<%= item.name %>"
+                        src="<%= item.wishlistImage  %>"
+                        alt="Product image"
                         class="img-fluid"
                       />
                     </td>
